--- a/HR.LeaveManagement.Api/appsettings.json
+++ b/HR.LeaveManagement.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+   
+    "FromAddress": "no-reply@humanresources.organization.com",
+    "FromName": "Human Resources"
+  },
+  "ConnectionStrings": {
+    "HRLeaveManagementConnectionStringDevelopment": "Server=localhost;Port=5432;Database=db_hr_leavemanagement;User Id=postgres;Password=3697;",
+    "HRLeaveManagementConnectionStringProduction": "Server=mel.db.elephantsql.com;Port=5432;Database=efhyqqzy;User Id=efhyqqzy;Password=UIkpehuQBRrhyfiDdCUIM80Lh834rzK_;"
+  }
 }
