Add: basic functionality of leave allocation feature

--- a/HR.LeaveManagement.Application/HR.LeaveManagement.Application.csproj
+++ b/HR.LeaveManagement.Application/HR.LeaveManagement.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\HR.LeaveManagement.Domain\HR.LeaveManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\LeaveAllocation\Queries\" />
+  </ItemGroup>
+
 </Project>
