Add: Authentication with jwt to the application

--- a/HR.LeaveManagement.Api/appsettings.json
+++ b/HR.LeaveManagement.Api/appsettings.json
@@ -14,5 +14,11 @@
   "ConnectionStrings": {
     "HRLeaveManagementConnectionStringDevelopment": "Server=localhost;Port=5432;Database=db_hr_leavemanagement;User Id=postgres;Password=3697;",
     "HRLeaveManagementConnectionStringProduction": "Server=mel.db.elephantsql.com;Port=5432;Database=efhyqqzy;User Id=efhyqqzy;Password=UIkpehuQBRrhyfiDdCUIM80Lh834rzK_;"
+  },
+  "JwtSettings": {
+    "Key": "8707ee99-0cff-45dc-98c3-50acff3b88b4",
+    "Issuer": "HRLeaveManagement",
+    "DurationInMinutes": 60,
+    "Audience": "HRLeaveManagementAudience"
   }
 }
