Add: serilog for structured logging and log persistence

--- a/HR.LeaveManagement.Api/appsettings.json
+++ b/HR.LeaveManagement.Api/appsettings.json
@@ -20,5 +20,23 @@
     "Issuer": "HRLeaveManagement",
     "DurationInMinutes": 60,
     "Audience": "HRLeaveManagementAudience"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
